style.css
.box {
    width: 100%;
    height: 200px;
    position: absolute;
    background: linear-gradient(to right, #f06 0%, #60f 100%);
    z-index: 2;
  }
  
  /* Use a 'Before' element to change the background */
.box::before {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    background: linear-gradient(to left, #f06 0%, #60f 100%);
    /* Give it an Opacity of 0 and create your animation property: */
    opacity: 0;
    animation: fadeIn 5s ease-in-out 0s infinite alternate-reverse;
    z-index: -1;
  }

/* Now call the keyframe-function */
@keyframes fadeIn {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

.buttons, #carousel, #intro {
    position: relative;
    top: 500px;
    
}

#color_1 {
  position: absolute;
  left: 250px;
  top: 300px;
  font-size: 45px;
  color: #fff;
  text-align: center;
  text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
  animation: fadeIn 3s;
}

#color_2 {
  position: absolute;
  top: 450px;
  left: 650px;
}

#color_3 {
  position: absolute;
  right: 350px;
  top: 300px;
}

.hidden {
  visibility: hidden;
}

#red {
  width: 100px;
  height: 50px;
  font-size: 30px;
  border-radius: 10%;
  border: thin solid darkred;
  background-color: whitesmoke;
  color: red;
  text-transform: uppercase;
  letter-spacing: 5px;
  text-align: center;
  padding-left: 10px;
  font-family: monospace;
}

